--- a/source/sass/blocks/ui.scss
+++ b/source/sass/blocks/ui.scss
@@ -43,3 +43,36 @@
     }
 }
 
+
+.btn-mono {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(88.33deg, #FECE03 -7.64%, #FDCD03 4.36%, #F8C903 20.36%, #EDC102 126.75%, #EBBF02 145.94%);
+  box-shadow: 6px 9px 40px rgba(137, 117, 27, 0.2);
+  border-radius: 8px;
+  transform: matrix(0.99, 0, -0.12, 1, 0, 0);
+  font-family: $font-family;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 100%;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+  color: #282828;
+}
+
+.btn-transparent {
+  border: 1px solid #FECE03;
+  border-radius: 8px;
+  transform: matrix(0.99, 0, -0.12, 1, 0, 0);
+  font-family: $font-family;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 100%;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+  color: #FECE03;
+}
+
