--- a/source/sass/general/blocks.scss
+++ b/source/sass/general/blocks.scss
@@ -8,11 +8,18 @@
 @import "blocks/second-slider.scss";
 @import "blocks/first-nav.scss";
 @import "blocks/ui.scss";
+@import "blocks/paralax-box.scss";
 @import "blocks/main-top.scss";
 @import "blocks/second-sec.scss";
-
+@import "blocks/third-sec.scss";
+@import "blocks/service-sec.scss";
+@import "blocks/team-sec.scss";
+@import "blocks/price-sec.scss";
+@import "blocks/frouth-sec.scss";
+@import "blocks/about-sec.scss";
+@import "blocks/publications-sec.scss";
+@import "blocks/form-box.scss";
 @import "blocks/footer.scss";
-
 
 @import "blocks/media.scss";
 
