--- a/source/sass/general/fonts.scss
+++ b/source/sass/general/fonts.scss
@@ -81,7 +81,7 @@
   font-family: "Montserrat";
 
   font-display: swap;
-  src: url("../fonts/montserratblack.woff2") format("woff2"), url("../fonts/montserratblack.woff") format("woff");
+  src: url("../fonts/Montserrat-Black.woff2") format("woff2"), url("../fonts/Montserrat-Black.woff") format("woff");
 }
 
 
