--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,7 @@
 @import "general/normalize";
 @import "general/swiper";
+@import "general/aos";
+@import "general/yt";
 @import "general/fonts";
 @import "general/variables";
 @import "general/global";
