--- a/source/sass/blocks/main-top.scss
+++ b/source/sass/blocks/main-top.scss
@@ -1,4 +1,8 @@
 .main-top {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  grid-gap: 35px;
 
   h2 {
     font-family: $font-family--s;
@@ -6,10 +10,86 @@
     font-size: Min(10vw, 175px);
     line-height: 100%;
     text-transform: uppercase;
-
+    font-weight: 900;
     color: $color--white;
 
     text-shadow: 0px 5px 7px rgba(0, 0, 0, 0.35);
     transform: matrix(0.99, 0, -0.12, 1, 0, 0);
+  }
+
+  p {
+    font-family: $font-family--s;
+    font-style: italic;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 30px;
+    color: rgba(255, 255, 255, 0.8);
+    max-width: 490px;
+  }
+
+
+}
+
+
+.main-title {
+  text-align: center;
+  margin: 0 auto 116px;
+
+  h2 {
+    font-family: $font-family;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 70px;
+    line-height: 70px;
+    letter-spacing: 0.02em;
+    text-transform: uppercase;
+    color: $text--white;
+    transform: matrix(1, 0, -0.1, 1, 0, 0);
+  }
+
+  p {
+    font-family: $font-family--s;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    letter-spacing: 0.02em;
+    color: rgba(255, 255, 255, 0.7);
+    max-width: 400px;
+    text-align: center;
+    margin: 0 auto;
+
+    &__box {
+      display: flex;
+      align-items: center;
+    }
+  }
+
+}
+
+
+.filter-buttons {
+  margin-top: 40px;
+  display: flex;
+  grid-gap: 15px;
+  justify-content: center;
+
+  &__btn {
+    width: 164.9px;
+    height: 40.32px;
+    font-size: 14px;
+    line-height: 14px;
+    transition: all .4s;
+
+    &.active {
+      background: linear-gradient(88.33deg, #FECE03 -7.64%, #FDCD03 4.36%, #F8C903 20.36%, #EDC102 126.75%, #EBBF02 145.94%);
+      box-shadow: 6px 9px 40px rgba(137, 117, 27, 0.2);
+      color: #282828;
+      pointer-events: none;
+    }
+
+    &:hover {
+      transform: matrix(0.99, 0, -0.12, 1, 0, 0) translate(5px, -5px);
+    }
   }
 }
