--- a/source/sass/blocks/second-sec.scss
+++ b/source/sass/blocks/second-sec.scss
@@ -1,7 +1,7 @@
 .second-section {
   padding: 180px 0;
-  background-image: url(../img/second-sec.png);
-  background-color: #1F1F1F;
+  // background-image: url(../img/second-sec.png);
+  // background-color: #1F1F1F;
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
@@ -12,40 +12,91 @@
     align-items: flex-start;
   }
 
+  &__list {
+    transform: matrix(1, 0, -0.09, 1, 0, 0);
+    grid-gap: 22px;
+    display: flex;
+    flex-direction: column;
+  }
+
   &__item {
     max-width: 396px;
-    width: fit-content;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: #ECC104;
     box-shadow: 0px 0px 30px 5px rgba(236, 193, 4, 0.35);
     border-radius: 8px;
-    transform: matrix(1, 0, -0.09, 1, 0, 0);
-    padding: 20px 40px;
+    height: 156px;
+
+    &:last-child {
+      margin-left: 25%;
+    }
+  }
+
+
+  .item-inner {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    grid-gap: 15px;
+
+    p {
+      font-family: $font-family--s;
+      font-style: normal;
+      font-weight: 500;
+      font-size: 18px;
+      line-height: 22px;
+      letter-spacing: 0.02em;
+      max-width: 80%;
+      color: $text--item;
+    }
+
+  }
+
+  &__item--mode {
+    width: min-content;
+    padding: 0 20px;
+
+    .item-inner {
+      flex-direction: row;
+      align-items: flex-end;
+      justify-content: center;
+      grid-gap: 5px;
+
+      p {
+        max-width: 50%;
+      }
+    }
+
+    span {
+      font-family: $font-family;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 144px;
+      line-height: 60%;
+      letter-spacing: 0.02em;
+      text-transform: uppercase;
+      color: $text--item;
+      position: relative;
+
+      b {
+        font-family: $font-family;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 36px;
+        line-height: 36px;
+        letter-spacing: 0.02em;
+        text-transform: uppercase;
+        position: absolute;
+        color: $text--item;
+        top: -30px;
+        right: -45px;
+      }
+    }
+
+
   }
 }
 
-.item-inner {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  grid-gap: 15px;
-
-  p {
-    font-family: $font-family--s;
-    font-style: italic;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 22px;
-    letter-spacing: 0.02em;
-
-    color: $text--item;
-  }
-
-  &--mode {
-    flex-direction: row;
-    align-items: flex-end;
-    grid-gap: 5px;
-    display: grid;
-    width: fit-content;
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
