--- a/source/sass/general/variables.scss
+++ b/source/sass/general/variables.scss
@@ -20,6 +20,7 @@ $color--black: #000000;
 
 $font-family: "Bebas Neue", sans-serif;
 $font-family--s: "Montserrat", sans-serif;
+$font-family--f: "cross", fantasy, "sans-serif";
 $font-family--t: "Proxima Nova", sans-serif;
 
 
