--- a/source/sass/blocks/mobile-menu.scss
+++ b/source/sass/blocks/mobile-menu.scss
@@ -1,3 +1,210 @@
 .mobile-btn {
   display: none;
 }
+
+.fixed-nav {
+  position: fixed;
+  bottom: 0;
+  background: #FECE03;
+  width: 100%;
+  display: none;
+  justify-content: space-around;
+  z-index: 50;
+  height: 74px;
+
+  &__list {
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0 0 0;
+
+
+    li a {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      grid-gap: 5px;
+
+      div {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 30px;
+        height: 30px;
+      }
+
+      span {
+        font-family: $font-family--t;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 10px;
+        line-height: 12px;
+        letter-spacing: 0.02em;
+        text-transform: capitalize;
+        color: $text--black;
+      }
+    }
+
+  }
+
+
+
+  .center {
+    flex-shrink: 0;
+    width: 93px;
+    height: 93px;
+    background: #FECE03;
+    border-radius:  50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
+    transform: translateY(-24px);
+
+    span {
+      font-family: $font-family--t;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 14px;
+      line-height: 17px;
+      letter-spacing: 0.02em;
+      text-transform: capitalize;
+      color: $text--black;
+    }
+
+    div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 30px;
+      height: 30px;
+    }
+
+    .menu {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
+  }
+}
+
+.mobile-btn {
+  transition: all.4s;
+}
+
+.mobile-btn.active {
+  transform: scaleY(-1);
+  // z-index: 150;
+}
+
+
+.mobile-menu {
+  width: 257px;
+  position: fixed;
+  overflow-y: scroll;
+  top: 0;
+  left: 0;
+  transform: translateX(-110%);
+  height: 100vh;
+  background: #FECE03;
+  z-index: 300;
+  transition: all .4s;
+  padding-top: 20px;
+  flex-direction: column;
+  &.active {
+    transform: translateX(0);
+  }
+}
+
+.overlay {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+
+  &::before {
+    transition: all .4s;
+    content: '';
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    background-color: rgba(2, 2, 2, 0.6);
+    z-index: 100;
+
+  }
+}
+
+.mobile-menu__list {
+  width: 100%;
+}
+
+.mobile-menu__item {
+  padding: 12px 31px 12px;
+  border-bottom: 1px solid rgba(31, 31, 31, 0.2);
+  width: 100%;
+  font-family: $font-family--t;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: 0.02em;
+  color: $text--black;
+}
+
+
+.phone-item {
+  padding-left: 20px;
+
+  a {
+    display: flex;
+    align-items: center;
+    grid-gap: 5px;
+  }
+}
+
+.mobile-menu__adress {
+  margin-top: 30px;
+  padding-left: 30px;
+  max-width: 200px;
+
+  address {
+    font-family: $font-family--t;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 13px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    color: $text--black;
+    margin-bottom: 14px;
+  }
+}
+
+.social-list-mobile {
+  display: flex;
+  align-items: center;
+  grid-gap: 11px;
+
+  a,li {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.mobile-tel {
+  font-family: $font-family--s;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 152%;
+  margin-bottom: 13px;
+  align-items: center;
+  color: #1F1F1F;
+}
+
+
+
