--- a/source/sass/general/variables.scss
+++ b/source/sass/general/variables.scss
@@ -20,7 +20,7 @@ $color--black: #000000;
 
 $font-family: "Bebas Neue", sans-serif;
 $font-family--s: "Montserrat", sans-serif;
-$font-family--f: fantasy;
+$font-family--f: "open";
 $font-family--t: "Proxima Nova", sans-serif;
 
 
