--- a/source/sass/blocks/media.scss
+++ b/source/sass/blocks/media.scss
@@ -1869,12 +1869,13 @@
       height: 10px;
       width: 10px;
       border-radius: 6px;
-      background: rgba(255, 255, 255, 0.3);
+      background: rgba(236, 193, 4, 0.616);
     }
 
     .swiper-pagination-bullet-active {
       width: 45px;
       border-radius: 6px;
+      background: rgb(236, 193, 4);
     }
   }
 
