--- a/source/sass/blocks/paralax-box.scss
+++ b/source/sass/blocks/paralax-box.scss
@@ -9,7 +9,7 @@
     line-height: 100%;
     text-transform: uppercase;
     color: transparent;
-    background: url(../img/paralax-bg.png);
+    background: url(../img/about-image.png);
     background-clip: text;
     transform: matrix(0.99, 0, -0.12, 1, 0, 0);
     background-repeat: no-repeat;
