--- a/source/sass/general/blocks.scss
+++ b/source/sass/general/blocks.scss
@@ -20,6 +20,8 @@
 @import "blocks/publications-sec.scss";
 @import "blocks/form-box.scss";
 @import "blocks/footer.scss";
+@import "blocks/modal.scss";
+@import "blocks/checkbox.scss";
 @import "blocks/mobile-menu.scss";
 
 @import "blocks/media.scss";
