--- a/source/sass/general/variables.scss
+++ b/source/sass/general/variables.scss
@@ -5,7 +5,8 @@ $text--white: #ffffff;
 $text--lable: #333333;
 
 $text--item: #1C1C1C;
-
+$text--modal: #1F1F1F;
+$text--name: #282828;
 
 $button-bg: linear-gradient(88.33deg, #FECE03 -7.64%, #EBBF02 145.94%);;
 $lable-bg: #FECE03;
